updating user class